Translated Accuracy and Evasion
Also removed special and replaced it with spezial

--- a/de_DE.lang
+++ b/de_DE.lang
@@ -5220,8 +5220,8 @@ pixelmon.effect.effectfailed=But it failed!
 pixelmon.effect.foresawattack=%s foresaw an attack!
 pixelmon.effect.modifierscleared=All stat changes were eliminated!
 pixelmon.effect.clearsmog=%s's stat changes were eliminated!
-pixelmon.effect.washealed=%s was healed!
-pixelmon.effect.healother=%s healed %s!
+pixelmon.effect.washealed=%s wurde geheilt!
+pixelmon.effect.healother=%s heilte %s!
 pixelmon.effect.hurtlanding=%s kept on going and crashed!
 pixelmon.effect.magnitude=Magnitude %d!
 pixelmon.effect.wagfinger=%s waggled its finger!
@@ -5249,38 +5249,38 @@ pixelmon.effect.alreadyconfused=%s is already confused!
 pixelmon.effect.razorwind=%s whips up a strong wind!
 pixelmon.effect.skyattack=%s becomes cloaked in a harsh light!
 pixelmon.effect.thrash=%s became confused due to fatigue!
-pixelmon.effect.accuracyincreased=%s's accuracy wurde erhöht!
-pixelmon.effect.accuracydecreased=%s's accuracy wurde gesenkt!
-pixelmon.effect.evasionincreased=%s's evasion wurde erhöht!
-pixelmon.effect.evasiondecreased=%s's evasion wurde gesenkt!
+pixelmon.effect.accuracyincreased=%s's Genauigkeit wurde erhöht!
+pixelmon.effect.accuracydecreased=%s's Genauigkeit wurde gesenkt!
+pixelmon.effect.evasionincreased=%s's Fluchtwert wurde erhöht!
+pixelmon.effect.evasiondecreased=%s's Fluchtwert wurde gesenkt!
 pixelmon.effect.attackincreased=%s's Angriff wurde erhöht!
 pixelmon.effect.attackdecreased=%s's Angriff wurde gesenkt!
 pixelmon.effect.defenseincreased=%s's Verteidigung wurde erhöht!
 pixelmon.effect.defensedecreased=%s's Verteidigung wurde gesenkt!
-pixelmon.effect.spatkincreased=%s's Special Angriff wurde erhöht!
-pixelmon.effect.spatkdecreased=%s's Special Angriff wurde gesenkt!
-pixelmon.effect.spdefincreased=%s's Special Verteidigung wurde erhöht!
-pixelmon.effect.spdefdecreased=%s's Special Verteidigung wurde gesenkt!
+pixelmon.effect.spatkincreased=%s's Spezial Angriff wurde erhöht!
+pixelmon.effect.spatkdecreased=%s's Spezial Angriff wurde gesenkt!
+pixelmon.effect.spdefincreased=%s's Spezial Verteidigung wurde erhöht!
+pixelmon.effect.spdefdecreased=%s's Spezial Verteidigung wurde gesenkt!
 pixelmon.effect.speedincreased=%s's Geschwindigkeit wurde erhöht!
 pixelmon.effect.speeddecreased=%s's Geschwindigkeit wurde gesenkt!
-pixelmon.effect.accuracyincreased2=%s's accuracy was increased sharply!
-pixelmon.effect.accuracydecreased2=%s's accuracy was decreased harshly!
-pixelmon.effect.evasionincreased2=%s's evasion was increased sharply!
-pixelmon.effect.evasiondecreased2=%s's evasion was decreased harshly!
+pixelmon.effect.accuracyincreased2=%s's Genauigkeit was increased sharply!
+pixelmon.effect.accuracydecreased2=%s's Genauigkeit was decreased harshly!
+pixelmon.effect.evasionincreased2=%s's Fluchtwert was increased sharply!
+pixelmon.effect.evasiondecreased2=%s's Fluchtwert was decreased harshly!
 pixelmon.effect.attackincreased2=%s's Angriff was increased sharply!
 pixelmon.effect.attackdecreased2=%s's Angriff was decreased harshly!
 pixelmon.effect.defenseincreased2=%s's Verteidigung was increased sharply!
 pixelmon.effect.defensedecreased2=%s's Verteidigung was decreased harshly!
-pixelmon.effect.spatkincreased2=%s's Special Angriff was increased sharply!
-pixelmon.effect.spatkdecreased2=%s's Special Angriff was decreased harshly!
-pixelmon.effect.spdefincreased2=%s's Special Verteidigung was increased sharply!
-pixelmon.effect.spdefdecreased2=%s's Special Verteidigung was decreased harshly!
+pixelmon.effect.spatkincreased2=%s's Spezial Angriff was increased sharply!
+pixelmon.effect.spatkdecreased2=%s's Spezial Angriff was decreased harshly!
+pixelmon.effect.spdefincreased2=%s's Spezial Verteidigung was increased sharply!
+pixelmon.effect.spdefdecreased2=%s's Spezial Verteidigung was decreased harshly!
 pixelmon.effect.speedincreased2=%s's Geschwindigkeit was increased sharply!
 pixelmon.effect.speeddecreased2=%s's Geschwindigkeit was decreased harshly!
-pixelmon.effect.accuracyincreased3=%s's accuracy was increased drastically!
-pixelmon.effect.accuracydecreased3=%s's accuracy was decreased drastically!
-pixelmon.effect.evasionincreased3=%s's evasion was increased drastically!
-pixelmon.effect.evasiondecreased3=%s's evasion was decreased drastically!
+pixelmon.effect.accuracyincreased3=%s's Genauigkeit was increased drastically!
+pixelmon.effect.accuracydecreased3=%s's Genauigkeit was decreased drastically!
+pixelmon.effect.evasionincreased3=%s's Fluchtwert was increased drastically!
+pixelmon.effect.evasiondecreased3=%s's Fluchtwert was decreased drastically!
 pixelmon.effect.attackincreased3=%s's Angriff was increased drastically!
 pixelmon.effect.attackdecreased3=%s's Angriff was decreased drastically!
 pixelmon.effect.defenseincreased3=%s's Verteidigung was increased drastically!
@@ -5291,19 +5291,19 @@ pixelmon.effect.spdefincreased3=%s's Special Verteidigung was increased drastica
 pixelmon.effect.spdefdecreased3=%s's Special Verteidigung was decreased drastically!
 pixelmon.effect.speedincreased3=%s's Geschwindigkeit was increased drastically!
 pixelmon.effect.speeddecreased3=%s's Geschwindigkeit was decreased drastically!
-pixelmon.effect.critincreased=%s is getting pumped!
-pixelmon.effect.accuracytoohigh=%s's accuracy can't go higher!
-pixelmon.effect.accuracytoolow=%s's accuracy can't go lower!
-pixelmon.effect.evasiontoohigh=%s's evasion can't go higher!
-pixelmon.effect.evasiontoolow=%s's evasion can't go lower!
+pixelmon.effect.critincreased=%s pumpt sich auf!
+pixelmon.effect.accuracytoohigh=%s's Genauigkeit can't go higher!
+pixelmon.effect.accuracytoolow=%s's Genauigkeit can't go lower!
+pixelmon.effect.evasiontoohigh=%s's Fluchtwert can't go higher!
+pixelmon.effect.evasiontoolow=%s's Fluchtwert can't go lower!
 pixelmon.effect.attacktoohigh=%s's Angriff can't go higher!
 pixelmon.effect.attacktoolow=%s's Angriff can't go lower!
 pixelmon.effect.defensetoohigh=%s's Verteidigung can't go higher!
 pixelmon.effect.defensetoolow=%s's Verteidigung can't go lower!
 pixelmon.effect.spatktoohigh=%s's Special Angriff can't go higher!
-pixelmon.effect.spatktoolow=%s's Special Angriff can't go lower!
-pixelmon.effect.spdeftoohigh=%s's Special Verteidigung can't go higher!
-pixelmon.effect.spdeftoolow=%s's Special Verteidigung can't go lower!
+pixelmon.effect.spatktoolow=%s's Spezial Angriff can't go lower!
+pixelmon.effect.spdeftoohigh=%s's Spezial Verteidigung can't go higher!
+pixelmon.effect.spdeftoolow=%s's Spezial Verteidigung can't go lower!
 pixelmon.effect.speedtoohigh=%s's Geschwindigkeit can't go higher!
 pixelmon.effect.speedtoolow=%s's Geschwindigkeit can't go lower!
 pixelmon.effect.surroundedbywater=%s is already surrounded by water!
@@ -5521,7 +5521,7 @@ pixelmon.status.firepledgeend=The sea of fire on %s's side disappeared!
 pixelmon.status.grasspledgeend=The swamp around %s's side disappeared!
 pixelmon.status.waterpledgeend=The rainbow above %s's side disappeared!
 pixelmon.status.telekinesis=%s was hurled into the air!
-pixelmon.status.helpinghand=%s is ready to help %s!
+pixelmon.status.helpinghand=%s ist bereit zu helfen %s!
 pixelmon.status.quickguard=Quick Guard protected %s's team!
 pixelmon.status.quickguardprotect=Quick Guard protected %s!
 pixelmon.status.embargo=%s can't use items!
@@ -5533,8 +5533,8 @@ pixelmon.status.luckychantend=%s's Lucky Chant wore off!
 pixelmon.status.magicroom=%s created an environment where items don't function!
 pixelmon.status.magicroomend=The itemless environment wore off!
 
-attack.curse.alreadycursed=%s is already cursed!
-attack.curse.curse=%s cut its own HP and laid a curse on %s!
+attack.curse.alreadycursed=%s hat bereits einen Fluch!
+attack.curse.curse=%s hat seine KP halbiert und einen Fluch auf %s gelegt!
 
 // Add key names from options menu
 key.categories.pixelmon=Pixelmon
@@ -5556,11 +5556,11 @@ halloween.alreadyregistered=%s has already been recieved!
 halloween.alreadyawarded=You have already finished this quest!
 halloween.message=I'm here to exchange your hallowed Gems!
 
-christmas.notchristmas=You must wait until Christmas to open this gift!
-christmas.ischristmas=Merry Christmas from the Pixelmon Development Team!
-christmas.received=You have received a Christmas gift from Delibird!
+christmas.notchristmas=Warte bis Wiehnachten um das Geschenk zu öffnen!
+christmas.ischristmas=Forhe Weihnachten vom Pixelmon Development Team!
+christmas.received=Du hast ein Weihnachtsgeschenk von Delibird bekommen!
 christmas.alreadygifted=Du hast bereits ein Weihnachtsgeschenk geöffnet!
-item.Gift Box.name=Gift Box
+item.Gift Box.name=Weihnachtsgeschenk
 
 //Unown blocks
 UnownBlock.A.name=Unown Block 'A'
